# key-drivers

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: code-qa.yml  publish.yml  tag-version.yml
demo/: prep_data.py
examples/: 00_basic_usage.ipynb  01_decomposition_example.ipynb  02_category_clustering.ipynb  basic_usage.ipynb  prep_data.py
src/key_driver_analysis/: metric_decomposition.py
src/key_drivers/: auto_insight.py
