[project]
name = "key_driver_analysis"
version = "0.1.0"
description = "A little helper to help automatically find key drivers of KPIs through time."
authors = [{ name = "Oracen", email = "alex.stenlake@gmail.com" }]
dependencies = ["scikit-learn>=1.5.1", "umap-learn>=0.5.6", "pandas>=2.2.2"]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["jupyter>=1.1.1", "matplotlib>=3.9.2"]
