[project]
name = "key-drivers"
description = "A little helper to help automatically find key drivers of KPIs through time."
authors = [{ name = "Oracen", email = "alex.stenlake@gmail.com" }]
dependencies = ["scikit-learn>=1.5.1", "umap-learn>=0.5.6", "pandas>=2.2.2"]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "mypy>=1.0.1",
    "black>=23.1.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "autoflake>=2.0.1",
    "pytest>=7.2.1",
    "pre-commit>=3.1.1",
    "python-semantic-release>=7.33.2",
]


[tool.pdm.scripts]
git-hooks = { shell = "pre-commit install --install-hooks && pre-commit install --hook-type commit-msg" }
test = { shell = "pytest ." }
autoflake-fix = { cmd = "autoflake ." }
black-fix = { cmd = "black ." }
isort-fix = { cmd = "isort ." }
flake8-check = { cmd = "flake8 ." }
black-check = { cmd = "black --check ." }
isort-check = { cmd = "isort --check-only ." }
mypy-check = "mypy --namespace-packages --check-untyped-defs ."
format = { composite = ["autoflake-fix", "black-fix", "isort-fix"] }
lint = { composite = [
    "mypy-check",
    "flake8-check",
    "black-check",
    "isort-check",
] }


[tool.isort]
multi_line_output = 3
force_to_top = ["os", "sys"]
profile = "black"
skip_gitignore = true

[tool.autoflake]
recursive = true
in-place = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-unused-variables = true
ignore-pass-statements = false

[tool.commitizen]
version = "0.1.4"
